--- a/analysis/efh_bathymetry_2028/.gitignore
+++ b/analysis/efh_bathymetry_2028/.gitignore
@@ -1,1 +1,19 @@
-/data/
+/data/*.dbf
+/data/*.prj
+/data/*.shp
+/data/*.sbx
+/data/*.sbn
+/data/*.shp.xml
+/data/*.cpg
+/data/*.shx
+/data/*.tif.xml
+/data/*.tfw
+/data/*.ovr
+/data/*.aux.xml
+/data/*.tif
+/data/bs_bathy
+/data/bts_tows
+/data/ai_grid_100m/
+/data/Norton_Bathymetry/
+/data/goa_bathy/
+/data/*.nc
