--- a/.github/workflows/secretScan.yml
+++ b/.github/workflows/secretScan.yml
@@ -11,3 +11,6 @@ jobs:
           fetch-depth: '0'
       - name: gitleaks-action
         uses: gitleaks/gitleaks-action@v1.6.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE}} # Only required for Organizations, not personal accounts.
